Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 3.0.0
============================

2023-00-00 Jose Kahan
	* aclocal.m4 moved to m4/apr.m4
	We were wrongly storing our local autoconf macros in aclocal.m4.  That
	file is reserved for aclocal and the autotools. We moved our macros to
	m4/apr.m4 (apr is from where we borrowed those macros).

	* src/print.c
	Integrate @bert-github's markup improvements for forwarded messages.
	Replace <div> with <article>, move the <h2> forwarded message from
	below the corresponding <section> parent to article to below <article>
	and move the aria-labelled-by attribute from that <section> to
	<article>.

	* src/{hypermail.h, string.c}
	Increase the max size for a scanned url string to 4096 to reflect
	modern trends.

	* src/parse.c
	parse_old_html() was not unconverting all the protected
	HTML entities (such as &ndash;) from the comments in a
	hypermail archive directory.

	* src/{printfile.c, lang.h}
	Associate title="Normal view" to the default stylesheet to take
	into account someone adding alternate css files by means
	of hypermail's configuration directives.

	* src/{parse.c, setup.c, setup.h}
	New configuration option ignore_content_disposition to be able to
	ignore the Content-Disposition header for some Mime-Types. This is
	particularly useful for old Apple Mail messages that associated
	Content-Disposition: attachment with multipart/appledouble.

	* src/parse.c
	When parse_old_html() was called with cmp_msgid to check if the first
	message in the archive corresponds to the first one that is added,
	the comparition failed if the msgid had characters that had to be
	escaped inside xml comments.

	* src/{parse.c, struct.c, struct.h}
	In complex messages where a multipart/mixed had a message/rfc822 part,
	with the later having multipart/mixed parts, parsing the message could
	fail if there were one or more missing boundary end separators.

	* src/parse.c